--- a/TracklistGenerator/TracklistGenerator.csproj
+++ b/TracklistGenerator/TracklistGenerator.csproj
@@ -92,6 +92,7 @@
     </Compile>
     <Compile Include="Model\ProjectFileParser.cs" />
     <Compile Include="Model\Track.cs" />
+    <Compile Include="Model\TrackListOperations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainWindow.resx">
