--- a/TracklistGenerator/packages.config
+++ b/TracklistGenerator/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="7-Zip.CommandLine" version="25.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
   <package id="SharpCompress" version="0.41.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
