--- a/TracklistGenerator/TracklistGenerator.csproj
+++ b/TracklistGenerator/TracklistGenerator.csproj
@@ -36,6 +36,9 @@
     <ApplicationIcon>tracklist_gen_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DoxCom">
+      <HintPath>..\..\..\..\Software\MiscAssemblies\DoxCom.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -141,6 +144,9 @@
   <ItemGroup>
     <Content Include="Configs\5-10-0.xml" />
     <Content Include="Configs\5-12-0.xml" />
+    <Content Include="connection_config.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="tracklist_gen_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
